--- a/index.html
+++ b/index.html
@@ -254,12 +254,10 @@
             </div>
             <div class="detail-box">
               <h6>
-                safety first
+                  Verified  Notes
               </h6>
               <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem
+                All the Notes which are being provided here have been verified by the community of Skilled students. We will keep on updating the materials according to the feedbacks.
               </p>
             </div>
           </div>
@@ -326,12 +324,11 @@
             </div>
             <div class="detail-box">
               <h6>
-                small class Size
+                Sample Question Paper
               </h6>
               <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem
+                All the Recent CAs ,MTEs ,ETEs paper are provided here.
+                This website will provide you a platform to contribute Question Papers.
               </p>
             </div>
           </div>
@@ -344,12 +341,12 @@
   <!-- start of download section -->
   <div class="container-1">
     <div class="heading">
-      <h1>Dowload Notes</h1>
+      <h1>Download Notes</h1>
     </div>
-    <div class="row">
+    <div class="row-1">
       <div class="card">
         <div class="card-header">
-          <h1>Semester 1</h1>
+          <h1>Sem 1</h1>
         </div>
         <div class="card-body">
           <a href="#" class="btn">Notes</a>
@@ -358,7 +355,7 @@
       </div>
       <div class="card">
         <div class="card-header">
-          <h1>Semester 2</h1>
+          <h1>Sem 2</h1>
         </div>
         <div class="card-body">
           <a href="#" class="btn">Notes</a>
@@ -367,7 +364,7 @@
       </div>
       <div class="card">
         <div class="card-header">
-          <h1>Semester 3</h1>
+          <h1>Sem 3</h1>
         </div>
         <div class="card-body">
           <a href="#" class="btn">Notes</a>
@@ -376,7 +373,7 @@
       </div>
       <div class="card">
         <div class="card-header">
-          <h1>Semester 4</h1>
+          <h1>Sem 4</h1>
         </div>
         <div class="card-body">
           <a href="#" class="btn">Notes</a>
@@ -385,7 +382,7 @@
       </div>
       <div class="card">
         <div class="card-header">
-          <h1>Semester 5</h1>
+          <h1>Sem 5</h1>
         </div>
         <div class="card-body">
           <a href="#" class="btn">Notes</a>
@@ -394,7 +391,7 @@
       </div>
       <div class="card">
         <div class="card-header">
-          <h1>Semester 6</h1>
+          <h1>Sem 6</h1>
         </div>
         <div class="card-body">
           <a href="#" class="btn">Notes</a>
@@ -403,7 +400,7 @@
       </div>
       <div class="card">
         <div class="card-header">
-          <h1>Semester 7</h1>
+          <h1>Sem 7</h1>
         </div>
         <div class="card-body">
           <a href="#" class="btn">Notes</a>
@@ -412,7 +409,7 @@
       </div>
       <div class="card">
         <div class="card-header">
-          <h1>Semester 8</h1>
+          <h1>Sem 8</h1>
         </div>
         <div class="card-body">
           <a href="#" class="btn">Notes</a>
@@ -421,7 +418,7 @@
       </div>
       <div class="card">
         <div class="card-header">
-          <h1>Semester 9</h1>
+          <h1>Sem 9</h1>
         </div>
         <div class="card-body">
           <a href="#" class="btn">Notes</a>
@@ -430,7 +427,7 @@
       </div>
       <div class="card">
         <div class="card-header">
-          <h1>Semester 10</h1>
+          <h1>Sem 10</h1>
         </div>
         <div class="card-body">
           <a href="#" class="btn">Notes</a>
@@ -439,7 +436,7 @@
       </div>
       <div class="card">
         <div class="card-header">
-          <h1>Semester 11</h1>
+          <h1>Sem 11</h1>
         </div>
         <div class="card-body">
           <a href="#" class="btn">Notes</a>
@@ -448,7 +445,7 @@
       </div>
       <div class="card">
         <div class="card-header">
-          <h1>Semester 12</h1>
+          <h1>Sem 12</h1>
         </div>
         <div class="card-body">
           <a href="#" class="btn">Notes</a>
@@ -479,10 +476,7 @@
               </h2>
             </div>
             <p>
-              It is a long established fact that a reader will be distracted by the readable content of a page when
-              looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
-              of letters, as opposed to using 'Content here, content here', making it look like readable English. Many
-              desktop publishing packages and web
+              We have established a platform that caters to the needs of students and learners who seek access to study materials. Our website can provide a convenient and efficient way for them to access notes. We are  demonstrating our ability to recognize a need in the market and provide a solution that can benefit other. We are providing towards a more accessible and inclusive education system, and all of us efforts to maintain its quality and relevance can help students achieve their academic goals.
             </p>
             <div>
               <a href="">
@@ -500,105 +494,6 @@
 
   <!-- end about section -->
 
-  <!-- client section -->
-
-  <section class="client_section layout_padding">
-    <div class="container layout_padding2-top">
-      <div class="heading_container">
-        <h2>
-          Parent’s Feedback
-        </h2>
-      </div>
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="client_container layout_padding">
-              <div class="img-box">
-                <img src="images/client.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h4>
-                  Rohali jonson
-                </h4>
-                <h6>
-                  customer
-                </h6>
-                <p>
-                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                  alteration in
-                  some form, by injected humour, or randomised words which don't look even slightly believable. If you
-                  are
-                  going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-                  the
-                  middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined
-                </p>
-                <img src="images/quote.png" alt="">
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="client_container layout_padding">
-              <div class="img-box">
-                <img src="images/client.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h4>
-                  Rohali jonson
-                </h4>
-                <h6>
-                  customer
-                </h6>
-                <p>
-                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                  alteration in
-                  some form, by injected humour, or randomised words which don't look even slightly believable. If you
-                  are
-                  going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-                  the
-                  middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined
-                </p>
-                <img src="images/quote.png" alt="">
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="client_container layout_padding">
-              <div class="img-box">
-                <img src="images/client.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h4>
-                  Rohali jonson
-                </h4>
-                <h6>
-                  customer
-                </h6>
-                <p>
-                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                  alteration in
-                  some form, by injected humour, or randomised words which don't look even slightly believable. If you
-                  are
-                  going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-                  the
-                  middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined
-                </p>
-                <img src="images/quote.png" alt="">
-              </div>
-            </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- end client section -->
 
   <!-- contact section -->
 
@@ -606,9 +501,9 @@
     <div class="container ">
       <div class="heading_container ">
         <h2 class="">
-          Request
+            Email us
           <span>
-            A call Back
+            your feedbacks.
           </span>
 
         </h2>
@@ -625,7 +520,7 @@
               <input type="email" placeholder="Email" />
             </div>
             <div>
-              <input type="text" placeholder="Pone Number" />
+              <input type="text" placeholder="Phone Number" />
             </div>
             <div>
               <input type="text" class="message-box" placeholder="Message" />
@@ -681,9 +576,9 @@
           <div class="info_logo">
             <div>
               <a href="">
-                <img src="images/logo.png" alt="" />
+                <img src="images/logo.png" alt="" width="40" height="40"/>
                 <span>
-                  Brighton
+                  StudyGeeks
                 </span>
               </a>
             </div>
@@ -738,7 +633,7 @@
   <section class="container-fluid footer_section">
     <p>
       &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      <a href="https://html.design/">StudyGeeks.com & co</a>
     </p>
   </section>
   <!-- footer section -->
