changes in each semester pages

--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
           <h1>Sem 1</h1>
         </div>
         <div class="card-body">
-          <a href="#" class="btn">Notes</a>
-          <a href="#" class="btn">PPTs</a>
+          <a href="sem1.html" class="btn">Notes</a>
+          <a href="sem1.html" class="btn">PPTs</a>
         </div>
       </div>
       <div class="card">
@@ -358,8 +358,8 @@
           <h1>Sem 2</h1>
         </div>
         <div class="card-body">
-          <a href="#" class="btn">Notes</a>
-          <a href="#" class="btn">PPTs</a>
+          <a href="sem2.html" class="btn">Notes</a>
+          <a href="sem2.html" class="btn">PPTs</a>
         </div>
       </div>
       <div class="card">
@@ -367,8 +367,8 @@
           <h1>Sem 3</h1>
         </div>
         <div class="card-body">
-          <a href="#" class="btn">Notes</a>
-          <a href="#" class="btn">PPTs</a>
+          <a href="sem3.html" class="btn">Notes</a>
+          <a href="sem3.html" class="btn">PPTs</a>
         </div>
       </div>
       <div class="card">
@@ -376,8 +376,8 @@
           <h1>Sem 4</h1>
         </div>
         <div class="card-body">
-          <a href="#" class="btn">Notes</a>
-          <a href="#" class="btn">PPTs</a>
+          <a href="sem4.html" class="btn">Notes</a>
+          <a href="sem4.html" class="btn">PPTs</a>
         </div>
       </div>
       <div class="card">
@@ -385,8 +385,8 @@
           <h1>Sem 5</h1>
         </div>
         <div class="card-body">
-          <a href="#" class="btn">Notes</a>
-          <a href="#" class="btn">PPTs</a>
+          <a href="sem5.html" class="btn">Notes</a>
+          <a href="sem5.html" class="btn">PPTs</a>
         </div>
       </div>
       <div class="card">
@@ -394,8 +394,8 @@
           <h1>Sem 6</h1>
         </div>
         <div class="card-body">
-          <a href="#" class="btn">Notes</a>
-          <a href="#" class="btn">PPTs</a>
+          <a href="sem6.html" class="btn">Notes</a>
+          <a href="sem6.html" class="btn">PPTs</a>
         </div>
       </div>
       <div class="card">
@@ -403,8 +403,8 @@
           <h1>Sem 7</h1>
         </div>
         <div class="card-body">
-          <a href="#" class="btn">Notes</a>
-          <a href="#" class="btn">PPTs</a>
+          <a href="sem7.html" class="btn">Notes</a>
+          <a href="sem7.html" class="btn">PPTs</a>
         </div>
       </div>
       <div class="card">
@@ -412,8 +412,8 @@
           <h1>Sem 8</h1>
         </div>
         <div class="card-body">
-          <a href="#" class="btn">Notes</a>
-          <a href="#" class="btn">PPTs</a>
+          <a href="sem8.html" class="btn">Notes</a>
+          <a href="sem8.html" class="btn">PPTs</a>
         </div>
       </div>
       <div class="card">
@@ -421,8 +421,8 @@
           <h1>Sem 9</h1>
         </div>
         <div class="card-body">
-          <a href="#" class="btn">Notes</a>
-          <a href="#" class="btn">PPTs</a>
+          <a href="sem9.html" class="btn">Notes</a>
+          <a href="sem9.html" class="btn">PPTs</a>
         </div>
       </div>
       <div class="card">
@@ -430,8 +430,8 @@
           <h1>Sem 10</h1>
         </div>
         <div class="card-body">
-          <a href="#" class="btn">Notes</a>
-          <a href="#" class="btn">PPTs</a>
+          <a href="sem10.html" class="btn">Notes</a>
+          <a href="sem10.html" class="btn">PPTs</a>
         </div>
       </div>
       <div class="card">
@@ -439,8 +439,8 @@
           <h1>Sem 11</h1>
         </div>
         <div class="card-body">
-          <a href="#" class="btn">Notes</a>
-          <a href="#" class="btn">PPTs</a>
+          <a href="sem11.html" class="btn">Notes</a>
+          <a href="sem11.html" class="btn">PPTs</a>
         </div>
       </div>
       <div class="card">
@@ -448,8 +448,8 @@
           <h1>Sem 12</h1>
         </div>
         <div class="card-body">
-          <a href="#" class="btn">Notes</a>
-          <a href="#" class="btn">PPTs</a>
+          <a href="sem12.html" class="btn">Notes</a>
+          <a href="sem12.html" class="btn">PPTs</a>
         </div>
       </div>
     </div>
@@ -548,84 +548,7 @@
 
 
   <!-- info section -->
-  <section class="info_section layout_padding">
-    <div class="container">
-      <div class="info_form">
 
-        <div class="row">
-          <div class="offset-lg-3 col-lg-3">
-            <h5 class="form_heading">
-              Newsletter
-            </h5>
-          </div>
-          <div class="col-md-6">
-            <form action="#">
-              <input type="text" placeholder="Enter Your email">
-              <button>
-                subscribe
-              </button>
-            </form>
-          </div>
-        </div>
-
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <div class="info_logo">
-            <div>
-              <a href="">
-                <img src="images/logo.png" alt="" width="40" height="40"/>
-                <span>
-                  StudyGeeks
-                </span>
-              </a>
-            </div>
-            <p>
-              There are many variations of passages of Lorem Ipsum available,
-              but the majority have suffered alteration
-            </p>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="info_links ">
-            <h5>
-              Contact Us
-            </h5>
-            <p class="pr-0 pr-md-4 pr-lg-5">
-              Donec odio. Quisque volutpat mattis eros.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-              odio. Quisque volutpat mattis eros
-            </p>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="info_insta">
-            <h5>
-              INFORMATION
-            </h5>
-            <p class="pr-0 pr-md-4 pr-md-5">
-              Donec odio. Quisque volutpat mattis eros.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-              odio. Quisque volutpat mattis eros
-            </p>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="pl-0 pl-lg-5 pl-md-4">
-            <h5>
-              MY ACCOUNT
-
-            </h5>
-            <p>
-              Donec odio. Quisque volutpat mattis eros.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-              odio. Quisque volutpat mattis eros
-            </p>
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <!-- end info_section -->
 
