--- a/about.html
+++ b/about.html
@@ -198,8 +198,8 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      &copy; 2023 All Rights Reserved By
+      <a href="">StudyGeeks.com & co.</a>
     </p>
   </section>
   <!-- footer section -->
